# routes/api.php
@@ -27,6 +27,6 @@ use Illuminate\Support\Facades\Route;
 //     Route::delete('/{id}', [PostController::class,'destroy'])
 // });
 
-// Route::resource('posts', PostController::class);
+Route::resource('posts', PostController::class);
 Route::resource('users', UsersController::class);
 // Route::post('/post',[PostController::class,'swagger']);
